<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_photo">Change photo</string>
    <string name="user_name">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="balance_value">$ 1593</string>
    <string name="help">Help</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="log_out_text">Log out</string>
    <string name="payment_method">Payment method</string>
    <string name="non_existent_account">You want to log out from non-existent account.</string>
    <string name="avatar_image_desc">Avatar image</string>
    <string name="upload_item_desc">Upload item icon</string>
    <string name="menu_item_desc">Icon of menu item</string>
    <string name="icon_arrow_forward_desc">Icon of button to go forward</string>

    <string name="shared_prefs_user_name_key" translatable="false">Shared prefs user key</string>
</resources>