<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/payment_method_layout_height_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/payment_method_layout_margin_top_parent">

    <ImageView
        android:id="@+id/paymentMethodImageView"
        android:layout_width="@dimen/payment_method_layout_width_icon"
        android:layout_height="@dimen/payment_method_layout_height_icon"
        android:layout_marginStart="@dimen/payment_method_layout_margin_start_icon"
        android:src="@drawable/ic_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu_item_desc" />

    <TextView
        android:id="@+id/paymentMethodTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/payment_method_layout_margin_start_text"
        android:gravity="center"
        style="@style/TextAppearance.OnlineShop.PayRelated"
        android:text="@string/payment_method"
        app:layout_constraintBottom_toBottomOf="@id/paymentMethodImageView"
        app:layout_constraintStart_toEndOf="@id/paymentMethodImageView"
        app:layout_constraintTop_toTopOf="@id/paymentMethodImageView" />

    <ImageView
        android:id="@+id/forwardImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/payment_method_layout_margin_end_arrow"
        android:src="@drawable/ic_forward"
        app:layout_constraintBottom_toBottomOf="@id/paymentMethodImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/paymentMethodImageView"
        android:contentDescription="@string/icon_arrow_forward_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>