<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_margin_top_parent"
    android:layout_marginBottom="@dimen/fragment_margin_bottom_parent"
    android:background="@color/mainColor"
    tools:context=".presentation.ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="@dimen/fragment_width_avatar"
            android:layout_height="@dimen/fragment_height_avatar"
            android:layout_marginTop="@dimen/fragment_margin_top_avatar"
            android:background="@drawable/ic_avatar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/avatar_image_desc" />

        <TextView
            android:id="@+id/changePhotoButton"
            android:layout_width="@dimen/fragment_width_change_photo_button"
            android:layout_height="@dimen/fragment_height_change_photo_button"
            android:layout_marginTop="@dimen/fragment_margin_top_change_photo_button"
            android:gravity="center"
            style="@style/TextAppearance.OnlineShop.ChangePhoto"
            android:text="@string/change_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarImageView" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="@dimen/fragment_width_user_name_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_margin_top_user_name_text"
            android:gravity="center_horizontal"
            style="@style/TextAppearance.OnlineShop.UserName"
            android:text="@string/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePhotoButton" />

        <include
            android:id="@+id/uploadItemViewContainer"
            android:layout_width="@dimen/upload_item_width_parent"
            android:layout_height="@dimen/upload_item_height_parent"
            layout="@layout/upload_item_layout"
            android:layout_marginTop="@dimen/upload_item_margin_top_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameTextView"/>

        <LinearLayout
            android:id="@+id/menuContainerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_margin_top_menu_container"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/uploadItemViewContainer">

            <include
                layout="@layout/trade_store_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/trade_store_layout_extra_margin_start"/>

            <include
                layout="@layout/payment_method_layout"/>

            <include
                layout="@layout/trade_store_cash_layout"/>

            <include
                layout="@layout/trade_store_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/trade_store_layout_extra_margin_top"/>

            <include
                layout="@layout/restore_purchase_layout"/>

            <include
                layout="@layout/help_layout"/>

            <include
                layout="@layout/logout_layout"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>